styles.css
body {
    font-family: "Roboto", sans-serif;
    background-color: #f7f7f7;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.footer {
    background-color: #d6d6d6;
    text-align: center;
    margin-top: auto;
}

.calculator {
    background-color: #696969;
    width: 400px;
    height: 500px;
    margin: 80px auto;
    padding: 3px 10px;
    border-radius: 20px;
    box-shadow: 4px 4px 8px 0px;
}

.display {
    background-color: #f7f7f7;
    width: 100%;
    height: 70px;
    margin: 10px auto;
    border-radius: 10px;
    text-align: right;
    font-size: 50px;
    line-height: 70px;
    padding: 0 10px;
    box-sizing: border-box;
    box-shadow: 2px 2px 4px 0 inset;
}

.buttons {
    width: 100%;
    height: 400px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 8px;
}

.row {
    display: flex;
    justify-content: center;
    gap: 8px;
}

button {
    width: 90px;
    height: 90px;
    font-size: 36px;
    box-shadow: 2px 2px 4px 0;
    border: none;
    border-radius: 5px;
}

button.operator {
    background-color: #ffa500;
}

button.operator:hover {
    background-color: #c78100;
}

button.clear {
    background-color: #eb2e2e;
}

button.clear:hover {
    background-color: #af2020;
}

button.equals {
    background-color: #46e046;
}

button.equals:hover {
    background-color: #35a835;
}

button.number {
    background-color: #f7f7f7;
}

button.number:hover {
    background-color: #b8b8b8;
}

